...
             app:layout_anchorGravity="bottom|left|end"
             app:pressedTranslationZ="12dp">

         </com.getbase.floatingactionbutton.FloatingActionButton>

         <!--<android.support.design.widget.FloatingActionButton-->
             <!--android:id="@+id/floatingActionButtonMenu"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:layout_marginLeft="16dp"-->
             <!--android:layout_marginRight="16dp"-->
             <!--android:layout_marginBottom="66dp"-->
             <!--app:elevation="6dp"-->
...
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fab_colorNormal="@color/white"
                 app:fab_colorPressed="@color/colorPrimaryDark"
                 app:fab_icon="@drawable/minivan"
                 app:fab_size="mini"
                 android:id="@+id/fab_action1"
                 app:fab_title="Taxi Ranks"/>


             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
...
