<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ranks">


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="273dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:text="Back"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-57dp"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>